--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -663,7 +663,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                         <input type="checkbox" [disabled]="false"
                             style="position: absolute;left: 6px;margin: -16px 8px;"
                             [checked]="this.bmxItem.componentText[y].SELECTED_ROW"
-                            (change)="setRating($event,y);leaveStar(y);">
+                            (change)="leaveStar(y);">
                     </div>
                     <div style="display: flex;flex-direction: column;">
                         <div *ngFor="let columnName of columnsNames; let e =  index">
