--- a/src/app/bmx/components/project-list/project-list.component.scss
+++ b/src/app/bmx/components/project-list/project-list.component.scss
@@ -9,6 +9,11 @@
     text-align: center;
   }
 }
+.calendar{
+  width: 23%;
+  position: relative;
+  left: 30px !important;
+}
 @media screen and (max-width: 1510px){
   .table{
     td{
@@ -16,7 +21,7 @@
     }
   }
   .calendar{
-    width: 25%;
+    width: 23%;
     position: relative;
     left: 30px !important;
   }
@@ -29,7 +34,7 @@
     }
   }
   .calendar{
-    width: 25%;
+    width: 23%;
     position: relative;
     left: 30px !important;
   }
