--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
@@ -270,3 +270,781 @@
    color: #76D354;
    font-size: 21px;
 }
+
+.upload-box {
+  position: absolute;
+  width: 62vw;
+  background: #fafafa;
+  z-index: 1;
+  top: -8px;
+  left: 15%;
+  border: 4px solid #063074;
+}
+
+.drag-handle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #ccc;
+  cursor: move;
+  width: 1024px;
+  height: 54px;
+}
+
+.upload-title-container {
+  text-align: center;
+}
+
+.upload-title {
+  font-size: 16px;
+  margin: 20px;
+  color: #48535e;
+}
+
+
+
+.image-upload-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 30px;
+}
+
+.file-upload-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 30px;
+}
+.file-input{
+  display: none;
+}
+
+.select-files-button {
+  background-color: #003180;
+  color: white;
+  margin: -3px -173px 0px 29px;
+}
+
+.upload-files-button {
+  background-color: #ee7f25;
+  color: white;
+  margin-right: 33px;
+}
+/* File: styles.css */
+
+.image-upload-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.template-list {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  width: 100%;
+  justify-content: center;
+}
+
+
+.image-index {
+  font-size: 25px;
+  color: #003180;
+  width: 40px;
+}
+
+.delete-button {
+  background-color: #ffffff;
+}
+
+.delete-button mat-icon {
+  color: #e20000;
+}
+.centered-button-container {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.cancel-button {
+  outline: none;
+  color: #d35854;
+  margin-bottom: 50px;
+}
+.category-container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 40px;
+}
+
+.category-name {
+  font-size: 25px;
+  color: #324395;
+  padding-bottom: 10px;
+}
+
+.category-description {
+  font-size: 18px;
+  color: #ee7f25;
+  padding-bottom: 20px;
+}
+
+.drop-list-container {
+  margin-bottom: 45px;
+}
+
+.draggable-item {
+  /* Styles for draggable items if needed */
+}
+
+.editable-textarea {
+  text-align: center;
+  font-weight: bold;
+  color: #324395;
+  width: 65px;
+}
+.dynamic-button {
+  color: white;
+  animation: rubberBand 700ms ease-in forwards;
+  background-color:#ee7f25 ;
+}
+
+
+
+
+
+
+
+@media (min-width: 1025px) {
+  .desktop {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile {
+    display: none;
+    padding-bottom: 30px;
+  }
+
+  .test-name-table {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 1024px) {
+  .desktop {
+    display: none;
+  }
+  .test-name-table {
+    display: flex;
+    flex-direction: column;
+    // gap: 16px;
+    // padding-top: 10px;
+    align-items: center;
+    border: 2px solid rgb(235, 235, 235);
+    border-radius: 5px;
+    width: 100vw;
+    overflow: hidden;
+
+  }
+
+  .mobile {
+    padding-bottom: 30px;
+  }
+
+  .selectedCard{
+   display: none;
+  }
+  .noSelectedCard{
+    right: 7px;
+  }
+
+}
+
+.test-name-table:hover {
+  @include BoxShadow(6);
+}
+
+.red {
+  background-color: white;
+  border-left: rgb(231, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+  padding: 0px;
+  // margin: 5px;
+}
+
+.blue {
+  background-color: white;
+  border-left: rgb(230, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;// COMMENT IF YOU WANT SINGLE LINES
+  border-top: rgb(231, 230, 230) 1px solid;
+  padding: 0px;
+  // margin: 5px;
+}
+
+.test-name-table:last-child {
+  border-bottom: rgb(231, 230, 230) 1px solid;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  // IF YOU WANT TO CHANGE TO AUTOSCROLL
+  overflow-x: scroll;
+  height: 46vh;
+}
+
+.rating-text {
+  font-size: 17px;
+  // margin-bottom: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: #324395;
+}
+
+.header-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+}
+
+.header-delete-icon {
+  cursor: pointer;
+  margin: -2px 5px;
+  color: red;
+  font-size: 20px;
+}
+
+.row-box {
+  border: none;
+  // max-width: 300px;
+}
+
+.rationale-box {
+  border: none;
+  // width: 300px;
+}
+
+.add-column {
+  outline: none;
+
+  float: right;
+  color: #324395;
+}
+
+.add-column-active {
+  outline: none;
+  float: right;
+
+  mat-icon{
+    color: #324395;
+  }
+}
+
+.image-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 30px;
+}
+.image-row:hover {
+  @include BoxShadow(4);
+}
+
+.image-cell {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.scroller-style::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+.scroller-style::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+.scroller-style::-webkit-scrollbar-thumb {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.scroller-style::-webkit-scrollbar-thumb:hover {
+  background: #283e90;
+}
+
+
+textarea {
+  resize: none;
+  outline: none;
+  height: auto;
+  overflow: auto;
+}
+
+
+textarea::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+textarea::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+textarea::-webkit-scrollbar-thumb {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+textarea::-webkit-scrollbar-thumb:hover {
+  background: #283e90;
+}
+
+// textarea::-webkit-scrollbar {
+//   display: none;
+// }
+
+textarea {
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  // min-height: 1.5rem;
+  padding: 0.2rem 0.0rem;
+  // font-size: 1rem;
+  // line-height: 2rem;
+  // font-weight: 300;
+  background: #ffffff;
+  justify-content: center;
+
+  border-radius: 6px;
+  outline: none;
+  // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
+  // box-shadow: 5px 7px 7px #d1d9e9, 15px 0px 1px #ffffff;
+  resize: vertical;
+  transition: ease 0.2s;
+  cursor: pointer;
+}
+
+textarea::placeholder {
+  color: #9fa8da;
+}
+
+// textarea:focus {
+//   min-height: 3rem;
+//   cursor: text;
+//   box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
+// }
+
+textarea:placeholder-shown {
+  background: none;
+}
+
+
+mat-form-field {
+  margin-right: 12px;
+}
+
+// INPUT RANGE STYLE
+
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 7px 8px;
+  width: 100%;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #ef7f25;
+  border-radius: 1.3px;
+  // border: 0.2px solid #010101;
+}
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 16px;
+  width: 16px;
+  border-radius: 10px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -6px;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #ef7f25;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #ef7f25;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type="range"]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: #2a6495;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type="range"]::-ms-fill-upper {
+  background: #ef7f25;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type="range"]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: #ef7f25;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: #ef7f25;
+}
+
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type="checkbox"],
+  input[type="radio"] {
+    --active: #ee7f25;
+    --active-inner: #fff;
+    --focus: 2px rgba(39, 94, 254, 0.3);
+    --border: #bbc1e1;
+    --border-hover: #ee7f25;
+    --background: #fff;
+    --disabled: #f6f8ff;
+    --disabled-inner: #e1e6f9;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 21px;
+    outline: none;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    margin: 0;
+    cursor: pointer;
+    border: 1px solid var(--bc, var(--border));
+    background: var(--b, var(--background));
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+    &:after {
+      content: "";
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+    }
+    &:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: 0.3s;
+      --d-t: 0.6s;
+      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
+    }
+    &:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: 0.9;
+      &:checked {
+        --b: var(--disabled-inner);
+        --bc: var(--border);
+      }
+      & + label {
+        cursor: not-allowed;
+      }
+    }
+    &:hover {
+      &:not(:checked) {
+        &:not(:disabled) {
+          --bc: var(--border-hover);
+        }
+      }
+    }
+    &:focus {
+      box-shadow: 0 0 0 var(--focus);
+    }
+    &:not(.switch) {
+      width: 21px;
+      &:after {
+        opacity: var(--o, 0);
+      }
+      &:checked {
+        --o: 1;
+      }
+    }
+    & + label {
+      font-size: 14px;
+      line-height: 21px;
+      display: inline-block;
+      vertical-align: top;
+      cursor: pointer;
+      margin-left: 4px;
+    }
+  }
+  input[type="checkbox"] {
+    &:not(.switch) {
+      border-radius: 7px;
+      &:after {
+        width: 5px;
+        height: 9px;
+        border: 2px solid var(--active-inner);
+        border-top: 0;
+        border-left: 0;
+        left: 7px;
+        top: 4px;
+        transform: rotate(var(--r, 20deg));
+      }
+      &:checked {
+        --r: 43deg;
+      }
+    }
+    &.switch {
+      width: 38px;
+      border-radius: 11px;
+      &:after {
+        left: 2px;
+        top: 2px;
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        background: var(--ab, var(--border));
+        transform: translateX(var(--x, 0));
+      }
+      &:checked {
+        --ab: var(--active-inner);
+        --x: 17px;
+      }
+      &:disabled {
+        &:not(:checked) {
+          &:after {
+            opacity: 0.6;
+          }
+        }
+      }
+    }
+  }
+  input[type="radio"] {
+    border-radius: 50%;
+    &:after {
+      width: 19px;
+      height: 19px;
+      border-radius: 50%;
+      background: var(--active-inner);
+      opacity: 0;
+      transform: scale(var(--s, 0.7));
+    }
+    &:checked {
+      --s: 0.5;
+    }
+  }
+}
+
+.modal-video {
+  /*display: block;  Hidden by default */
+  position: fixed; /* Stay in place */
+  top: 0%;
+  z-index: 999; /* Sit on top */
+
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgb(0 0 0 / 50%); /* Black w/ opacity */
+
+  /* Modal Content/Box */
+  .modal-content {
+      background-color: rgba(0, 0, 0, 0);
+      top: 0%;
+      margin: 2% auto; /* 15% from the top and centered */
+      // margin-left: 15%;
+      // padding: 20px;
+      // border: 1px solid #888;
+      width: 70%; /* Could be more or less, depending on screen size */
+      height: auto;
+      img {
+          margin-bottom: 15px;
+          height: auto;
+      }
+      img:last-child {
+          margin-bottom: 0;
+      }
+  }
+
+  .close-modal {
+      // margin-bottom: 5px;
+      position: relative;
+
+      // top: 12%;
+      left: 42.5%;
+      width: 15%;
+      padding: 0px 5px;
+      // margin-left: 36.5%;
+      color: #ffffff;
+      background-color: #ee7f24;
+      // float: right;
+      // font-size: 22px;
+      // font-weight: bold;
+      // text-align: center;
+      // height: 25px;
+      // border-radius: 5px;
+      transition: background-color 0.5s, color 0.5s;
+  }
+
+  .close-modal:hover,
+  .close-modal:focus {
+      background-color: #283e90;
+      color: white;
+      text-decoration: none;
+  }
+}
+/* escondemos el default checkbox */
+.modal-video input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+//-------------modal-----------------//
+@media (min-width: 1025px) {
+  .modal-video .modal-content {
+      top: 10%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 55%;
+      // height: auto;
+      height: auto;
+      overflow-y: hidden;
+      overflow-x: hidden;
+  }
+
+  .modal-video .close-modal {
+      // margin-left: 42.5%;
+      top: 12%;
+  }
+
+  .modal-content::-webkit-scrollbar {
+      width: 6px;
+  }
+
+  /* Track */
+  .modal-content::-webkit-scrollbar-track {
+      background: white;
+  }
+
+  /* Handle */
+  .modal-content::-webkit-scrollbar-thumb {
+      background: #283e90;
+      border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  .modal-content::-webkit-scrollbar-thumb:hover {
+      background: #283e90;
+  }
+}
+
+//-------------modal mobil-----------------------//
+
+@media only screen and (min-width: 993px) and (max-width: 1024px) {
+  .modal-video .modal-content {
+      top: 3%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 30%;
+      height: auto;
+  }
+
+
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .modal-video .modal-content {
+      top: 4%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 30%;
+      height: auto;
+  }
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .modal-video .modal-content {
+      top: 4%;
+      margin: 1% auto;
+      margin-left: auto;
+      width: 40%;
+      height: auto;
+  }
+
+
+  .modal-video .close-modal {
+      position: relative;
+      // margin-left: 42.5%;
+      top: 5%;
+  }
+}
+
+
+
+/* // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
+// END OF THE SCSS PROJECT ******************************************************************************************* */
