--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -52,15 +52,24 @@
 
 .no-print {
   color: #324395 !important;
-  font-size: 25px !important;
+  font-size: 19px !important; /* Tamaño predeterminado para pantallas grandes */
   transition: all 0.1s ease-in-out;
   text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-}
 
+}
+@media (max-width: 1600px) {
+    .no-print {
+      font-size: 16px !important;
+    }
+  }
+@media (max-width: 1430px) {
+    .no-print {
+      font-size: 14px !important;
+    }
+  }
 
 .project-name-global {
   color: #324395;
-  font-size: 25px;
   transition: all 0.1s ease-in-out;
   text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
   box-shadow: inset inset 0px 0px 5px #0bd659;
