--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -430,9 +430,9 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     min-width: 20px;
                     line-height: 19px;
                     padding: 1px 0px;
-                    margin: -12px 0px;
+                    margin: -12px 6px;
                     position: absolute;
-                    animation: rubberBand 700ms ease-in  forwards;"
+                    animation: rubberBand 700ms ease-in  forwards;height: 25px;"
                                 mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
                         </div>
                         <div style="display: flex;gap: 60px;flex-direction: column;">
@@ -443,9 +443,9 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                      min-width: 20px;
                      line-height: 19px;
                      padding: 2px 0px;
-                     margin: -5px -2px;
+                     margin: -5px -8px;
                      position: absolute;
-                     animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
+                     animation: rubberBand 700ms ease-in  forwards;height: 25px;" mat-button>{{criteria.RATE}}</button>
                             </div>
                         </div>
                         <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
