--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -610,9 +610,9 @@ bottom: -2; ">
                             min-width: 20px;
                             line-height: 19px;
                             padding: 2px 0px;
-                            margin: -45px 10px;
-                            position: absolute;
-                            animation: rubberBand 700ms ease-in  forwards;"
+                            margin: -52px 10px;
+                                position: absolute;
+                                animation: rubberBand 700ms ease-in  forwards;height: 33px;"
                             mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
                     </div>
                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
