--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -121,7 +121,7 @@
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
             </button>
-          
+
             <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column"
                 matTooltip="add text column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
@@ -723,7 +723,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             padding: 1px 0px;
                             margin: -12px 0px;
                             position: absolute;
-                            animation: rubberBand 700ms ease-in  forwards;"
+                            animation: rubberBand 700ms ease-in  forwards;    height: 25px;"
                                     mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
                             </div>
 
@@ -737,7 +737,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                              padding: 2px 0px;
                              margin: -5px -2px;
                              position: absolute;
-                             animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
+                             animation: rubberBand 700ms ease-in  forwards;    height: 25px;" mat-button>{{criteria.RATE}}</button>
                                 </div>
                             </div>
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
