--- a/src/app/bmx/components/project-list/project-list.component.scss
+++ b/src/app/bmx/components/project-list/project-list.component.scss
@@ -1,48 +1,21 @@
 /* Global styles.css or component's css with encapsulation set to None */
-
-
-::ng-deep .mat-sort-header-container {
-  display: flex;
-  cursor: pointer;
-  align-items: center;
-  letter-spacing: normal;
-  outline: 0;
-  justify-content: center !important;
-}
-
-.mat-sort-header-container {
-  display: flex;
-  cursor: pointer;
-  align-items: center;
-  letter-spacing: normal;
-  outline: 0;
-  justify-content: center !important;
-}
 .mat-calendar-body-selected {
   // background-color: #fff !important;
   color: #fff !important;
 }
 
-.table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
-  padding: 0.75rem 0.2rem 0.75rem 1rem !important;
-}
-
 .table{
   td{
-    text-align: center;
+    text-align: start;
   }
 }
-
-
 @media screen and (max-width: 1510px){
   .table{
     td{
-      padding: 5px 3px 0 9px !important;
+      padding: 5px 3px 0 0.75rem !important;
     }
   }
-  .calendar{
+  .calendar{ 
     width: 25%;
     position: relative;
     left: 30px !important;
@@ -52,7 +25,7 @@
 @media screen and (max-width: 1390px){
   .table{
     td{
-      padding: 0px 5px 0 0px !important;
+      padding: 0px 3px 0 0.75rem  !important;
     }
   }
   .calendar{
