--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,12 +3,21 @@ app-survey-creation-design {
     width: 100%;
 }
 
-app-dashboard{
+app-dashboard {
     width: 83%;
 }
+
 .mat-icon {
-   
+
     overflow: visible !important;
 }
+
 @import './styles/theme';
 
+
+
+.mat-mdc-icon-button.mat-mdc-button-base {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
